Implementação da funcionalidade de biblioteca - RQ-004

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -178,3 +178,7 @@ legend {
 #resume {
     height: 90px;
 }
+
+.navbar-vertical .navbar-nav .nav .nav-item .nav-link:before {
+    background-color: #00ff05;
+}
