Implementação da funcionalidade de relatórios

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -185,7 +185,7 @@ legend {
 }
 
 .navbar-vertical .navbar-nav .nav .nav-item .nav-link:before {
-    background-color: #00ff05;
+    background-color: transparent;
 }
 
 .switch-large {
