--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -52,23 +52,23 @@
 }
 
 .bg-primary {
-  position: relative;
-  overflow: hidden;
-  background-color: #133b6a !important;
-  background-image: linear-gradient(315deg, #133b6a 0%, #2a6f97 74%) !important;
-  z-index: -1;
-  margin-bottom: 20px;
+    position: relative;
+    overflow: hidden;
+    background-color: #133b6a !important;
+    background-image: linear-gradient(315deg, #133b6a 0%, #2a6f97 74%) !important;
+    z-index: -1;
+    margin-bottom: 20px;
 
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.07'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  }
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.07'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    }
 }
 
 .card-footer {
@@ -439,3 +439,65 @@ legend {
         }
     }
 }
+
+.guidebook-content img {
+    max-width: 100%;
+    height: auto;
+    border-radius: .5rem;
+}
+
+.card-pagination {
+    p {
+        margin-bottom: 0px;
+    }
+
+    .pagination {
+        margin-bottom: 0px;
+    }
+}
+
+.active {
+    i {
+        color: #FFF !important;
+    }
+}
+
+.rank-badge {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: bold;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+}
+
+/* Special colors for Top 3 */
+.rank-badge.rank-1 {
+    background-color: #ffc107;
+    color: #343a40;
+}
+
+/* Gold */
+.rank-badge.rank-2 {
+    background-color: #ced4da;
+    color: #343a40;
+}
+
+/* Silver */
+.rank-badge.rank-3 {
+    background-color: #cd7f32;
+}
+
+/* Bronze */
+/* Default color for other ranks */
+.rank-badge.rank-other {
+    background-color: #6c757d;
+}
+
+/* Grey */
