--- a/resources/sass/web.scss
+++ b/resources/sass/web.scss
@@ -446,7 +446,7 @@ header {
 
 footer,
 .footer {
-    background-color: #052c52;
+    background: linear-gradient(160deg, #1a4c8a 0%, #133b6a 100%);
     color: #fff;
     border-top: 5px solid #F5B800;
 
@@ -464,7 +464,7 @@ footer,
         color: #cccccc;
         text-decoration: none;
         display: block;
-        margin-bottom: 8px;
+        margin-bottom: 10px;
         font-size: 14px;
         transition: color 0.3s;
 
